fix cards alignment

--- a/static/style.css
+++ b/static/style.css
@@ -438,7 +438,8 @@
       display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 450px), 1fr));
       gap: 1rem;
-      
+        grid-auto-rows: 1fr;
+            align-items: stretch;
       width: 100%;
   }
 
@@ -464,7 +465,8 @@
       bottom: 0;
       margin: 0;
       border-radius: 0;
-
+    display: block;
+    margin-top: auto;
       align-self: flex-end;
   }
 
